[package]
name = "eventmesh-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
authors = [
    "mxsm <mxsm@apache.org>"
]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = " 0.5.0"
http-body-util = "0.1.0-rc.3"
bytes = "1.4.0"
serde_json = "1.0.104"
url = "2.4.0"
http = "0.2.9"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }