[package]
name = "eventmesh"
version = "1.9.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "mxsm <mxsm@apache.org>"
]
description = "Rust client for Apache EventMesh"
license = "Apache-2.0"
keywords = ["EventMesh", "SDK", "rust-client","rust"]
readme = "./README.md"

[features]
default = []
blocking = []
async = []

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.48"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

tokio = { version = "1.32.0", features = ["full"] }

async-trait = "0.1"