[package]
name = "eventmesh-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
authors = [
    "mxsm <mxsm@apache.org>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
pretty_env_logger = " 0.5.0"
http-body-util = "0.1.0-rc.3"
bytes = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
url = "2.4.0"
http = "0.2.9"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }